Optimize the attribute cfg of git

--- a/layout/_partial/_comment/gitalk.ejs
+++ b/layout/_partial/_comment/gitalk.ejs
@@ -4,8 +4,8 @@
 <script src="<%- theme.cdn.gitalk.js %>"></script>
 <script type="text/javascript">
     // var gitalk = new Gitalk({
-    //   clientID: '<%- theme.gitalk.ClientID %>',
-    //   clientSecret: '<%- theme.gitalk.ClientSecret %>',
+    //   clientID: '<%- theme.gitalk.clientID %>',
+    //   clientSecret: '<%- theme.gitalk.clientSecret %>',
     //   repo: '<%- theme.gitalk.repo %>',
     //   owner: '<%- theme.gitalk.owner %>',
     //   admin: '<%- theme.gitalk.admin %>',
@@ -16,12 +16,17 @@
     //   createIssueManually: '<%- theme.gitalk.createIssueManually %>',
     //   distractionFreeMode: '<%- theme.gitalk.distractionFreeMode %>'
     // })
+    idCfg = "<%= theme.gitalk.clientID %>"
+    secretCfg = "<%= theme.gitalk.clientSecret %>"
+    repoCfg = "<%= theme.gitalk.repo %>"
+    ownerCfg = "<%= theme.gitalk.owner %>"
+    adminCfg = "<%= theme.gitalk.admin %>"
     var gitalk = new Gitalk({
-      clientID: '<%- theme.gitalk.ClientID %>',
-      clientSecret: '<%- theme.gitalk.ClientSecret %>',
-      repo: 'gittalk-comments',
-      owner: 'Su-Lemon',
-      admin: 'Su-Lemon',
+      clientID: idCfg,
+      clientSecret: secretCfg,
+      repo: repoCfg,
+      owner: ownerCfg,
+      admin: adminCfg,
       id: md5(location.pathname),
       labels: ['Gitalk'],
       perPage: 15,
