--- a/layout/_partial/site-verification.ejs
+++ b/layout/_partial/site-verification.ejs
@@ -1,8 +1,12 @@
 <% if(theme.site_verification.google) { %>
     <!-- Site Verification -->
-    <meta name="google-site-verification" content="<%= theme.site_verification.google %>" />
+    <% for (serve in theme.site_verification.google) { %>
+        <meta name="google-site-verification" content="<%= theme.site_verification.google[serve] %>" />
+    <% } %>
 <% } %>
 <% if(theme.site_verification.baidu) { %>
     <!-- Site Verification -->
-    <meta name="baidu-site-verification" content="<%= theme.site_verification.baidu %>" />
+    <% for (serve in theme.site_verification.baidu) { %>
+        <meta name="baidu-site-verification" content="<%= theme.site_verification.baidu[serve] %>" />
+    <% } %>
 <% } %>
