Optimize the resource configuration method in config. Layout optimization

--- a/layout/_partial/_comment/gitalk.ejs
+++ b/layout/_partial/_comment/gitalk.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="<%- theme.cdn.gitalk.css %>">
-<script src="<%= theme.cdn.md5.js %>"></script>
+<script src="<%- url_for() %><%= theme.sources.md5.js %>"></script>
 <div id="gitalk"></div>
 <script src="<%- theme.cdn.gitalk.js %>"></script>
 <script type="text/javascript">
