--- a/layout/_widget/search.ejs
+++ b/layout/_widget/search.ejs
@@ -7,7 +7,8 @@
     </div>
 </div> -->
 
-<!-- 站内搜索 -->
+<!-- 站内搜索，需要引入jQuery -->
+
 <div class="nexmoe-widget-wrap">
     <div class="nexmoe-widget nexmoe-search" >
         <form id="search-form">
