--- a/layout/_partial/after-footer.ejs
+++ b/layout/_partial/after-footer.ejs
@@ -17,3 +17,13 @@
 		margins: 10,
 	});
 </script>
+
+<script src="<%- full_url_for() %>lib/google-code-prettify/src/prettify.js"></script>
+
+<script type="text/javascript">
+	$(document).ready(function(){
+		$('pre').addClass('prettyprint linenums');
+		$('code').addClass('prettyprint');
+		prettyPrint();
+	})
+</script>
