--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -27,8 +27,8 @@ article code::-webkit-scrollbar-thumb {
 }
 
 article pre {
-	font-family: "Consolas", "Monaco";
-	font-size: 16px;
+	// font-family: "Consolas", "Monaco";
+	// font-size: 16px;
 	border-radius: $radius;
 	overflow: hidden;
     -webkit-box-sizing: border-box;
@@ -333,7 +333,7 @@ article ul .mdui-checkbox-icon {
 }
 
 article ol {
-	padding: 0 0 0 2.5em;
+	padding: 0 0 0 3.5em;
 	margin-top: 0
 }
 
@@ -362,7 +362,8 @@ article > ol > li::before {
 }
 
 article li {
-	line-height: 2rem;
+	font-size: 18px;
+	line-height: 28px;
 }
 
 article li p {
