--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -29,7 +29,8 @@
   <link rel="shortcut icon" href="<%= theme.favicon.href %>" type="<%= theme.favicon.type %>" />
   <%- open_graph({twitter_id: theme.twitter, google_plus: theme.google_plus, fb_admins: theme.fb_admins, fb_app_id: theme.fb_app_id}) %>
   <link rel="stylesheet" href="<%- url_for() %><%= theme.sources.style.css %>" type="text/css">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/justifiedGallery@3.8.1/dist/css/justifiedGallery.min.css">
+  <link rel="stylesheet" href="<%= theme.cdn.justifiedGallery.css %>">
+  <link rel="stylesheet" href="<%= theme.cdn.font.css %>">
   <% if (theme.iconlib) { %>
     <link rel="stylesheet" href="<%= theme.iconlib %>">
   <% } %>
